profile pic added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Welcome to My Webpage</h1>
         <p>This is a simple webpage with an external CSS file.</p>
+        <img src="P10.jpeg" alt="my profile picture" width="25%"/>
     </body>
 </html>
