--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+            <header>
         <h1>Welcome to My Webpage</h1>
         <p>This is a simple webpage with an external CSS file.</p>
         <img src="P10.jpeg" alt="my profile picture" width="25%"/>
+</header>
+<section class="hero">   
+
+</section>
+<section class="content">       </section>
+
     </body>
 </html>
