--- a/index.html
+++ b/index.html
@@ -3,19 +3,67 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Webpage</title>
+        <title>My HTML Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-            <header>
+<header>
         <h1>Welcome to My Webpage</h1>
+        <div class="mobile-header">
+            <img src="P10.jpeg" alt="my profile picture" width="25%" class="logo"/>
+        <button type="button" class="hamburger-button">
+            <img class="./img/hamburger.svg" alt=""three horizontal lines, positioned one above the other.>
+        </button>
+        </div>
+        <nav class="desktop-nav display-none" aria-lable="Primary">
+            <ul>
+                <li>
+                    <a href="#">bio</a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
+                <li>
+                    <a href="#">blog</a>
+                </li>
+                <li>
+                    <a href="#">social media</a>
+                </li>
+             </ul>
+        </nav>
+        <nav class="mobile-nav display-none" aria-lable="Primary">
+            <ul>
+                <li>
+                    <a href="#">bio</a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
+                <li>
+                    <a href="#">blog</a>
+                </li>
+                <li>
+                    <a href="#">social media</a>
+                </li>
+             </ul>
+        </nav>
+    </header>
+
+        </div>
+        
+        </div>
         <p>This is a simple webpage with an external CSS file.</p>
-        <img src="P10.jpeg" alt="my profile picture" width="25%"/>
+        
 </header>
 <section class="hero">   
-
+hero 
 </section>
-<section class="content">       </section>
+<section class="articles-container">   
+articles containers X2
+</section>
+
+<footer>   
+</footer>
 
     </body>
 </html>
