img folder added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <header>
         <h1>Welcome to My Webpage</h1>
         <div class="mobile-header">
-            <img src="P10.jpeg" alt="my profile picture" width="25%" class="logo"/>
+            <img src="img/P10.jpeg" alt="my profile picture" width="25%" class="logo"/>
         <button type="button" class="hamburger-button">
-            <img class="./img/hamburger.svg" alt=""three horizontal lines, positioned one above the other.>
+            <img class="hamburger" src="./img/hamburger.svg" width="80px" alt=""three horizontal lines, positioned one above the other.>
         </button>
         </div>
         <nav class="desktop-nav display-none" aria-lable="Primary">
@@ -49,10 +49,7 @@
         </nav>
     </header>
 
-        </div>
-        
-        </div>
-        <p>This is a simple webpage with an external CSS file.</p>
+       <p>This is a simple webpage with an external CSS file.</p>
         
 </header>
 <section class="hero">   
