imp folder added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="desktop-nav display-none" aria-lable="Primary">
             <ul>
                 <li>
-                    <a href="#">bio</a>
+                    <a href="#">My Bio</a>
                 </li>
                 <li>
                     <a href="#">contact</a>
@@ -34,7 +34,7 @@
         <nav class="mobile-nav display-none" aria-lable="Primary">
             <ul>
                 <li>
-                    <a href="#">bio</a>
+                    <a href="#">My Bio</a>
                 </li>
                 <li>
                     <a href="#">contact</a>
@@ -53,7 +53,7 @@
         
 </header>
 <section class="hero">   
-hero 
+<p> I have developed </p>
 </section>
 <section class="articles-container">   
 articles containers X2
