icons saved  and header completed

--- a/index.html
+++ b/index.html
@@ -8,42 +8,38 @@
     </head>
     <body>
 <header>
-        <h1>Welcome to My Webpage</h1>
+        <h1>My Journey</h1>
+        <h2> Bridget's hompage</h2>
         <div class="mobile-header">
-            <img src="img/P10.jpeg" alt="my profile picture" width="25%" class="logo"/>
+            <img src="img/P12-Subscribe.png" alt="Subscribe" width="25%" class="logo"/>
         <button type="button" class="hamburger-button">
-            <img class="hamburger" src="./img/hamburger.svg" width="80px" alt=""three horizontal lines, positioned one above the other.>
+            <img class="hamburger" src="./img/P13 hamburger.svg" width="80px" alt=""three horizontal lines, positioned one above the other.>
         </button>
         </div>
         <nav class="desktop-nav display-none" aria-lable="Primary">
             <ul>
                 <li>
-                    <a href="#">My Bio</a>
+                    <a href="#">blog</a>
                 </li>
+                
                 <li>
                     <a href="#">contact</a>
                 </li>
                 <li>
-                    <a href="#">blog</a>
-                </li>
-                <li>
-                    <a href="#">social media</a>
+                    <a href="#">more</a>
                 </li>
              </ul>
         </nav>
         <nav class="mobile-nav display-none" aria-lable="Primary">
             <ul>
                 <li>
-                    <a href="#">My Bio</a>
+                    <a href="#">blog</a>
                 </li>
                 <li>
                     <a href="#">contact</a>
                 </li>
                 <li>
-                    <a href="#">blog</a>
-                </li>
-                <li>
-                    <a href="#">social media</a>
+                    <a href="#">more</a>
                 </li>
              </ul>
         </nav>
