--- a/index.html
+++ b/index.html
@@ -48,10 +48,25 @@
        <p>This is a simple webpage with an external CSS file.</p>
         
 </header>
-<section class="hero">   
-<p> I have developed </p>
+<section class="hero">
+    <div class="mobile-hero">
+            <img src="img/P12-Subscribe.png" alt="Subscribe" width="25%" class="logo"/>   
+    </div>
+    <div class="desktop-hero">
+            <img src="img/P12-Subscribe.png" alt="Subscribe" width="10%" class="logo"/>   
+    </div>
+    <div class="desktop-hero-text">
+        <h2>my bio</h2>
+        <p>  my bio -by ES</p>
+    </div>
 </section>
-<section class="articles-container">   
+<section class="articles-container"> 
+    <article>
+        <img src="img/P21 Projects.png" alt="Subscribe" width="25%" class="logo"/>
+        <h3>My Projects</h3>
+        <p>I have listed Programming Projects I have completed in the last 3 months</p>  
+        <a href="#">Read More</a>
+    </article>
 articles containers X2
 </section>
 
