articles and footer are completed

--- a/index.html
+++ b/index.html
@@ -67,10 +67,30 @@
         <p>I have listed Programming Projects I have completed in the last 3 months</p>  
         <a href="#">Read More</a>
     </article>
-articles containers X2
+    <article>
+        <img src="img/P22 hobbies.png" alt="Subscribe" width="25%" class="logo"/>
+        <h3>My Hobbies</h3>
+        <p>I love painting in my past time, and you could checkout my portfolio here</p>  
+        <a href="#">More</a>
+    </article>
+    <article>
+        <img src="img/P23 expertise.png" alt="Subscribe" width="25%" class="logo"/>
+        <h3>My Expertise</h3>
+        <p>I am a project controllers by profession, and currently hoding a leadership role in a major mining company in Australia. </p>  
+        <a href="#">More</a>
+    </article>
 </section>
 
 <footer>   
+<a href="https://www.linkedin.com/in/bridget-tang-08360a30/" title="Check out my LinkedIn Profile">
+    <img class = "socials icon" src="img/P15 Linkedin.png" alt="the LinkedIn logo, a blue square with white 'In' text"> </a>
+
+a href="https://www.tiktok.com/en//" title="Check out my tiktok Profile">
+    <img class = "socials icon" src="img/P14tiktok.png" alt="the tiktok logo, a stylized, 3D musical note in white, blue, and pink, resembling a lowercase "d"> </a>
+
+<a href="https://www.instagram.com/" title="Check out my Instagram Profile">
+    <img class = "socials icon" src="img/P16instagram.svg" alt="the LinkedIn logo, a blue square with white 'In' text"> </a>
+
 </footer>
 
     </body>
