--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     </head>
     <body>
 <header>
-        <h1 style="text-align:center; font-size:100px;"> My Journey</h1>
-        <h2> Bridget's hompage</h2>
+        
         <div class="mobile-header">
             <img src="img/P12-Subscribe.png" alt="my profile" width="25%" class="logo"/>
+            <h1 style= "text-align: center; font-size:100px"> My Journey</h1>
+        <h2 style= "text-align: center; font-size:20px"> Bridget's hompage</h2>
         <button type="button" class="hamburger-button">
             <img class="hamburger" src="./img/P13 hamburger.svg" width="80px" alt=""three horizontal lines, positioned one above the other.>
         </button>
         </div>
-        <nav class="desktop-nav display-none" aria-lable="Primary">
+        <!-- <nav class="desktop-nav display-none" aria-lable="Primary"> -->
             <ul>
                 <li>
                     <a href="#">blog</a>
