center journey text

--- a/index.html
+++ b/index.html
@@ -1,90 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My HTML Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <div class="mobile-header">
-                <img src="img/P12-Subscribe.png" alt="my profile" width="80px" class="logo"/>
-                <div>
-                    <h1>My Journey</h1>
-                    <h2>Bridget's Hompage</h2>
-                </div>
-                <button type="button" class="hamburger-button">
-                    <img class="hamburger-icon" src="./img/P13 hamburger.svg" alt="three horizontal lines, positioned one above the other."/>
-                </button>
-            </div>
-            <nav class="desktop-nav display-none" aria-lable="Primary">
-                <ul>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">contact</a></li>
-                    <li><a href="#">more</a></li>
-                </ul>
-            </nav>
-            <nav class="mobile-nav display-none" aria-lable="Primary">
-                <ul>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">contact</a></li>
-                    <li><a href="#">more</a></li>
-                </ul>
-            </nav>
-        </header>    
-        <section class= "hero">
-            <div class="desktop-hero">
-                <img src="img/P11BneWheel.JPG" width="2000px" alt="my profile photo" />   
-            </div>
-    
-    <!-- <div class="mobile-hero"> -->
-            <!-- <img src="img/P11BneWheel.JPG" alt="my profile photo"/>    -->
-    <!-- </div> -->
-    
-            <div class="desktop-hero-text">
-                <h1 style="text-align: right; font-size:100px">My Bio</h1>
-                <p>
-                    Hello! My name is Bridget. 
-                    I was born in China and migrated to Australia in 2009.I am a MBA-qualified projct controls engineer, currently holding a leadership role at Rio Tinto.
-                    I have a passion for learning new skills and I am currently diving into the world of coding, hoping to bring automation and productivity to my work.    
-                </p>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My HTML Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="mobile-header">
+        <img src="img/P12-Subscribe.png" alt="my profile" width="80px" class="logo"/>
+        <div>
+            <h1>My Journey</h1>
+            <h2>Bridget's Homepage</h2>
+        </div>
+        <button type="button" class="hamburger-button">
+            <img class="hamburger-icon" src="./img/P13 hamburger.svg"
+                 alt="three horizontal lines, positioned one above the other."/>
+        </button>
+        <nav class="desktop-nav" aria-label="Primary">
+            <ul>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">more</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="hero">
+    <div class="desktop-hero">
+        <img src="img/P11BneWheel.JPG" width="2000px" alt="my profile photo"/>
+    </div>
+
+    <div class="desktop-hero-text">
+        <h1 style="text-align: right; font-size:100px">My Bio</h1>
+        <p>
+            Hello! My name is Bridget.
+            I was born in China and migrated to Australia in 2009.I am a MBA-qualified projct controls engineer,
+            currently holding a leadership role at Rio Tinto.
+            I have a passion for learning new skills and I am currently diving into the world of coding, hoping to bring
+            automation and productivity to my work.
+        </p>
+    </div>
     <!-- <div class="mobile-hero-text"> display-none -->
-        <!-- <h2>my bio</h2> -->
-        <!-- <p>  my bio -by ES</p> -->
-        </section>
-        <section class="articles-container"> 
-            <article>
-                <img src="img/P21 Projects.png" alt="Subscribe" width="25%" class="logo"/>
-                <h3>My Projects</h3>
-                <p>I have listed Programming Projects I have completed in the last 3 months</p>  
-                <a href="#">Read More</a>
-            </article>
-            <article>
-                <img src="img/P22 hobbies.png" alt="Subscribe" width="25%" class="logo"/>
-                <h3>My Hobbies</h3>
-                <p>I love painting in my past time, and you could checkout my portfolio here</p>  
-                <a href="#">More</a>
-            </article>
-            <article>
-                <img src="img/P23 expertise.png" alt="Subscribe" width="25%" class="logo"/>
-                <h3>My Expertise</h3>
-                <p>I am a project controllers by profession, and currently hoding a leadership role in a major mining company in Australia. </p>  
-                <a href="#">More</a>
-            </article>
-        </section>
-        <footer>   
-            <a href="https://www.linkedin.com/in/bridget-tang-08360a30/" title="Check out my LinkedIn Profile">
-                <img class = "socials icon" src="img/P24 linkedin.png" alt="the LinkedIn logo, a blue square with white 'In' text" width="200px">
-            </a>
-            <a href="https://www.tiktok.com/en//" title="Check out my tiktok Profile">
-                <img class = "socials icon" src="img/P14tiktok.png" alt="the tiktok logo, a stylized, 3D musical note in white, blue, and pink, resembling a lowercase" width="200px">
-            </a>
-            <a href="https://www.instagram.com/" title="Check out my Instagram Profile">
-                <img class = "socials icon" src="img/P16instagram.svg" alt="the LinkedIn logo, a blue square with white 'In' text" width="200px">
-            </a>
-        </footer>
-    </body>
+    <!-- <h2>my bio</h2> -->
+    <!-- <p>  my bio -by ES</p> -->
+</section>
+<section class="articles-container">
+    <article>
+        <img src="img/P21 Projects.png" alt="Subscribe" width="25%" class="logo"/>
+        <h3>My Projects</h3>
+        <p>I have listed Programming Projects I have completed in the last 3 months</p>
+        <a href="#">Read More</a>
+    </article>
+    <article>
+        <img src="img/P22 hobbies.png" alt="Subscribe" width="25%" class="logo"/>
+        <h3>My Hobbies</h3>
+        <p>I love painting in my past time, and you could checkout my portfolio here</p>
+        <a href="#">More</a>
+    </article>
+    <article>
+        <img src="img/P23 expertise.png" alt="Subscribe" width="25%" class="logo"/>
+        <h3>My Expertise</h3>
+        <p>I am a project controllers by profession, and currently hoding a leadership role in a major mining company in
+            Australia. </p>
+        <a href="#">More</a>
+    </article>
+</section>
+<footer>
+    <a href="https://www.linkedin.com/in/bridget-tang-08360a30/" title="Check out my LinkedIn Profile">
+        <img class="socials icon" src="img/P24 linkedin.png" alt="the LinkedIn logo, a blue square with white 'In' text"
+             width="200px">
+    </a>
+    <a href="https://www.tiktok.com/en//" title="Check out my tiktok Profile">
+        <img class="socials icon" src="img/P14tiktok.png"
+             alt="the tiktok logo, a stylized, 3D musical note in white, blue, and pink, resembling a lowercase"
+             width="200px">
+    </a>
+    <a href="https://www.instagram.com/" title="Check out my Instagram Profile">
+        <img class="socials icon" src="img/P16instagram.svg" alt="the LinkedIn logo, a blue square with white 'In' text"
+             width="200px">
+    </a>
+</footer>
+</body>
 </html>
