--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 <li><a href="#">more</a></li>
             </ul>
         </nav>
+        <nav class="mobile-nav" aria-label="Primary">
+            <ul>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">more</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
 <section class="hero">
