--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="mobile-header">
-        <img src="img/P12-Subscribe.png" alt="my profile" width="80px" class="logo"/>
+        <img src="img/subscribe.svg" alt="my profile" width="80px" class="logo"/>
         <div>
             <h1>My Journey</h1>
             <h2>Bridget's Homepage</h2>
@@ -37,11 +37,11 @@
 </header>
 <section class="hero">
     <div class="desktop-hero">
-        <img src="img/P11BneWheel.JPG" width="2000px" alt="my profile photo"/>
+        <img src="img/P11BneWheel.JPG"  alt="my profile photo"/>
     </div>
 
     <div class="desktop-hero-text">
-        <h1 style="text-align: right; font-size:100px">My Bio</h1>
+        <h1>My Bio</h1>
         <p>
             Hello! My name is Bridget.
             I was born in China and migrated to Australia in 2009.I am a MBA-qualified projct controls engineer,
@@ -50,27 +50,24 @@
             automation and productivity to my work.
         </p>
     </div>
-    <!-- <div class="mobile-hero-text"> display-none -->
-    <!-- <h2>my bio</h2> -->
-    <!-- <p>  my bio -by ES</p> -->
 </section>
 <section class="articles-container">
     <article>
-        <img src="img/P21 Projects.png" alt="Subscribe" width="25%" class="logo"/>
+        <img src="img/projects2.svg" alt="Subscribe" width="100%" class="icon"/>
         <h3>My Projects</h3>
         <p>I have listed Programming Projects I have completed in the last 3 months</p>
         <a href="#">Read More</a>
     </article>
     <article>
-        <img src="img/P22 hobbies.png" alt="Subscribe" width="25%" class="logo"/>
+        <img src="img/hobbies2.svg" alt="Subscribe" width="100%" class="icon"/>
         <h3>My Hobbies</h3>
         <p>I love painting in my past time, and you could checkout my portfolio here</p>
         <a href="#">More</a>
     </article>
     <article>
-        <img src="img/P23 expertise.png" alt="Subscribe" width="25%" class="logo"/>
+        <img src="img/expertise2.svg" alt="Subscribe" width="100%" class="icon"/>
         <h3>My Expertise</h3>
-        <p>I am a project controllers by profession, and currently hoding a leadership role in a major mining company in
+        <p>I am a project controllers by profession, and currently holding a leadership role in a major mining company in
             Australia. </p>
         <a href="#">More</a>
     </article>
