--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
 </section>
 <footer>
     <a href="https://www.linkedin.com/in/bridget-tang-08360a30/" title="Check out my LinkedIn Profile">
-        <img class="socials icon" src="img/P24 linkedin.png" alt="the LinkedIn logo, a blue square with white 'In' text"
-             width="200px">
+        <img class="socials icon" src="img/linkedin.svg" alt="the LinkedIn logo, a blue square with white 'In' text"
+             width="96px">
     </a>
     <a href="https://www.tiktok.com/en//" title="Check out my tiktok Profile">
-        <img class="socials icon" src="img/P14tiktok.png"
+        <img class="socials icon" src="img/tiktok.svg"
              alt="the tiktok logo, a stylized, 3D musical note in white, blue, and pink, resembling a lowercase"
-             width="200px">
+             width="96px">
     </a>
     <a href="https://www.instagram.com/" title="Check out my Instagram Profile">
-        <img class="socials icon" src="img/P16instagram.svg" alt="the LinkedIn logo, a blue square with white 'In' text"
-             width="200px">
+        <img class="socials icon" src="img/instagram.svg" alt="the LinkedIn logo, a blue square with white 'In' text"
+             width="96px">
     </a>
 </footer>
 </body>
