color changed in css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="desktop-hero-text">
-        <h1>My Bio</h1>
+        <h1 >My Bio</h1>
         <p>
             Hello! My name is Bridget.
             I was born in China and migrated to Australia in 2009.I am a MBA-qualified projct controls engineer,
@@ -55,8 +55,8 @@
     <article>
         <img src="img/projects2.svg" alt="Subscribe" width="100%" class="icon"/>
         <h3>My Projects</h3>
-        <p>I have listed Programming Projects I have completed in the last 3 months</p>
-        <a href="#">Read More</a>
+        <p>I have listed Programming Projects I have completed in the last few weeks</p>
+        <a href="#">More</a>
     </article>
     <article>
         <img src="img/hobbies2.svg" alt="Subscribe" width="100%" class="icon"/>
@@ -67,7 +67,7 @@
     <article>
         <img src="img/expertise2.svg" alt="Subscribe" width="100%" class="icon"/>
         <h3>My Expertise</h3>
-        <p>I am a project controllers by profession, and currently holding a leadership role in a major mining company in
+        <p>I am a project controller by profession, and currently holding a leadership role in a major mining company in
             Australia. </p>
         <a href="#">More</a>
     </article>
