--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="mobile-header">
-        <img src="img/subscribe.svg" alt="my profile" width="80px" class="logo"/>
+        <img src="img/p28 subscribe.png" alt="my profile" width="160px" class="logo"/>
         <div>
             <h1>My Journey</h1>
             <h2>Bridget's Homepage</h2>
@@ -53,19 +53,22 @@
 </section>
 <section class="articles-container">
     <article>
-        <img src="img/projects2.svg" alt="Subscribe" width="100%" class="icon"/>
+        <div class="article-title"><img src="img/p29my proj.png" alt="Subscribe" class="icon"/>
+            <div>
         <h3>My Projects</h3>
-        <p>I have listed Programming Projects I have completed in the last few weeks</p>
+    <p>I have listed Programming Projects I have completed in the last few weeks</p></div>
+    </div>
+        
         <a href="#">More</a>
     </article>
     <article>
-        <img src="img/hobbies2.svg" alt="Subscribe" width="100%" class="icon"/>
+        <img src="img/p31 my hobbies.png" alt="Subscribe" class="icon"/>
         <h3>My Hobbies</h3>
         <p>I love painting in my past time, and you could checkout my portfolio here</p>
         <a href="#">More</a>
     </article>
     <article>
-        <img src="img/expertise2.svg" alt="Subscribe" width="100%" class="icon"/>
+        <img src="img/p30my expertise.png" alt="Subscribe"  class="icon"/>
         <h3>My Expertise</h3>
         <p>I am a project controller by profession, and currently holding a leadership role in a major mining company in
             Australia. </p>
@@ -74,16 +77,16 @@
 </section>
 <footer>
     <a href="https://www.linkedin.com/in/bridget-tang-08360a30/" title="Check out my LinkedIn Profile">
-        <img class="socials icon" src="img/linkedin.svg" alt="the LinkedIn logo, a blue square with white 'In' text"
+        <img class="socials icon" src="img/p27 linkedin.png" alt="the LinkedIn logo, a blue square with white 'In' text"
              width="96px">
     </a>
     <a href="https://www.tiktok.com/en//" title="Check out my tiktok Profile">
-        <img class="socials icon" src="img/tiktok.svg"
+        <img class="socials icon" src="img/p26 tiktok.png"
              alt="the tiktok logo, a stylized, 3D musical note in white, blue, and pink, resembling a lowercase"
              width="96px">
     </a>
     <a href="https://www.instagram.com/" title="Check out my Instagram Profile">
-        <img class="socials icon" src="img/instagram.svg" alt="the LinkedIn logo, a blue square with white 'In' text"
+        <img class="socials icon" src="img/p25 ins.png" alt="the LinkedIn logo, a blue square with white 'In' text"
              width="96px">
     </a>
 </footer>
