styling is completed

--- a/index.html
+++ b/index.html
@@ -58,20 +58,24 @@
         <h3>My Projects</h3>
     <p>I have listed Programming Projects I have completed in the last few weeks</p></div>
     </div>
-        
         <a href="#">More</a>
     </article>
     <article>
-        <img src="img/p31 my hobbies.png" alt="Subscribe" class="icon"/>
-        <h3>My Hobbies</h3>
+        <div class="article-title"><img src="img/p31 my hobbies.png" alt="Subscribe" class="icon"/>
+        <div>
+            <h3>My Hobbies</h3>
         <p>I love painting in my past time, and you could checkout my portfolio here</p>
+        </div>
+    </div>
         <a href="#">More</a>
     </article>
     <article>
-        <img src="img/p30my expertise.png" alt="Subscribe"  class="icon"/>
+    <div class="article-title"><img src="img/p30my expertise.png" alt="Subscribe"  class="icon"/>
+        <div>
         <h3>My Expertise</h3>
         <p>I am a project controller by profession, and currently holding a leadership role in a major mining company in
-            Australia. </p>
+            Australia. </p></div>
+        </div>
         <a href="#">More</a>
     </article>
 </section>
