project page added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>My Projects</h3>
     <p>I have listed Programming Projects I have completed in the last few weeks</p></div>
     </div>
-        <a href="#">More</a>
+        <a href="myprojects/index.html">More</a>
     </article>
     <article>
         <div class="article-title"><img src="img/p31 my hobbies.png" alt="Subscribe" class="icon"/>
