bio text corrected

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <nav class="desktop-nav" aria-label="Primary">
             <ul>
                 <li><a href="#">blog</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="mailto:“bridget.tang@yahoo.co”">contact</a></li>
                 <li><a href="#">more</a></li>
             </ul>
         </nav>
         <nav class="mobile-nav" aria-label="Primary">
             <ul>
                 <li><a href="#">blog</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="mailto:“bridget.tang@yahoo.co”">contact</a></li>
                 <li><a href="#">more</a></li>
             </ul>
         </nav>
@@ -44,9 +44,9 @@
         <h1 >My Bio</h1>
         <p>
             Hello! My name is Bridget.
-            I was born in China and migrated to Australia in 2009.I am a MBA-qualified projct controls engineer,
+            I was born in China and migrated to Australia in 2009.I am a MBA-qualified project controls engineer,
             currently holding a leadership role at Rio Tinto.
-            I have a passion for learning new skills and I am currently diving into the world of coding, hoping to bring
+            I have a passion for learning new skills and I am currently diving into the world of coding with SheCodesAus, hoping to bring
             automation and productivity to my work.
         </p>
     </div>
