hobby photo 1 added

--- a/mybobbies/index.html
+++ b/mybobbies/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="mobile-header">
+        <img src="img/PH10.png" alt="my profile" width="160px" class="logo"/>
+    </div>
 
 </body>
 </html>
