--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>I love painting in my past time, and you could checkout my portfolio here</p>
         </div>
     </div>
-        <a href="#">More</a>
+        <a href="mybobbies/index.html">More</a>
     </article>
     <article>
     <div class="article-title"><img src="img/p30my expertise.png" alt="Subscribe"  class="icon"/>
