--- a/myhobbies/index.html
+++ b/myhobbies/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="mobile-header">
-        <img src="img/PH10.png" alt="my profile" width="160px" class="logo"/>
+        <img src="img/PH10.png" alt="My Painting 010" width="1600px" class="logo"/>
     </div>
 
 </body>
