hobbies 1st draft added

--- a/myhobbies/index.html
+++ b/myhobbies/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My HTML Portfolio</title>
+    <title>my hobbies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="mobile-header">
-        <img src="img/PH10.png" alt="My Painting 010" width="1600px" class="logo"/>
+    
+<div class="frame">
+    <div class="painting-canvas">
+        <img src="img/PH10.png" alt="My Painting 010" width="500px" class="logo"/>
     </div>
+</div>
+<p>     </p>
+<div class="frame">
+    <div class="painting-canvas">
+        <img src="img/PH10.png" alt="My Painting 010" width="500px" class="logo"/>
+    </div>
+</div>
 
 </body>
 </html>
