--- a/myhobbies/index.html
+++ b/myhobbies/index.html
@@ -8,7 +8,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+    <div class="mobile-header">
+        <img src="img/p28 subscribe.png" alt="my profile" width="160px" class="logo"/>
+        <div>
+            <h1>My Journey</h1>
+            <h2>Bridget's Homepage</h2>
+        </div>
+        <button type="button" class="hamburger-button">
+            <img class="hamburger-icon" src="./img/P13 hamburger.svg"
+                 alt="three horizontal lines, positioned one above the other."/>
+        </button>
+        <nav class="desktop-nav" aria-label="Primary">
+            <ul>
+                <li><a href="#">blog</a></li>
+                <li><a href="mailto:“bridget.tang@yahoo.co”">contact</a></li>
+                <li><a href="#">more</a></li>
+            </ul>
+        </nav>
+        <nav class="mobile-nav" aria-label="Primary">
+            <ul>
+                <li><a href="#">blog</a></li>
+                <li><a href="mailto:“bridget.tang@yahoo.co”">contact</a></li>
+                <li><a href="#">more</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 <div class="frame">
     <div class="painting-canvas">
         <img src="img/PH10.png" alt="My Painting 010" width="500px" class="logo"/>
