--- a/myhobbies/index.html
+++ b/myhobbies/index.html
@@ -11,7 +11,7 @@
     <header>
     <div class="mobile-header">
         <img src="img/ph28subscribe.png" alt="subscribe" width="160px" class="logo"/>
-        <div>
+        <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
             <h1>My Journey</h1>
             <h2>Bridget's Homepage</h2>
         </div>
@@ -26,26 +26,22 @@
         </div>
     </header>
 
-<section class="paintings-container">
-<div class="frame">
-    <div class="painting-canvas">
-        <img src="img/PH10.png" alt="My Painting 010" width="500px" />
+<section>
+    <article>
+    <div class="article-title">
+        <div class="frame">
+            <img src="img/PH12.jpg" alt="my painting 2" width="500px" />
+        </div>
+        
+        <div>
+        <h2>My Painting 2: The Ripen </h2>
+        <p>The Ripe </p>  
+    <a href="myprojects/index.html">Purchase link@Facebook Market</a></div>
     </div>
-</div>
-
-<div>
-    <h1>My paitning 1</h1> 
-    <p> my painting in 2022</p>
-</div>
-
+    </article>
 </section>
 
-<p>     </p>
-<div class="frame">
-    <div class="painting-canvas">
-        <img src="img/PH10.png" alt="My Painting 010" width="500px" />
-    </div>
-</div>
 
-</body>
-</html>
+
+
+
